{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 41,
  "lineage": "c36b235a-9362-fc64-44d4-b2d3fa602318",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417999966:internet-gateway/igw-0b6cbe74dd1b2c213",
            "id": "igw-0b6cbe74dd1b2c213",
            "owner_id": "905417999966",
            "tags": {
              "Name": "innovatech-igw",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-igw",
              "Project": "innovatech"
            },
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905417999966:loadbalancer/app/innovatech-alb/774a1f8b7efb54ce",
            "arn_suffix": "app/innovatech-alb/774a1f8b7efb54ce",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "innovatech-alb-2075580555.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:905417999966:loadbalancer/app/innovatech-alb/774a1f8b7efb54ce",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "innovatech-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cca0760ef4705e59"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b2a9386e8be45b58"
              },
              {
                "subnet_id": "subnet-0c6a5ccd95a2a706d"
              }
            ],
            "subnets": [
              "subnet-0b2a9386e8be45b58",
              "subnet-0c6a5ccd95a2a706d"
            ],
            "tags": {
              "Name": "innovatech-alb",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-alb",
              "Project": "innovatech"
            },
            "vpc_id": "vpc-05b7f35668bc3e225",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905417999966:listener/app/innovatech-alb/774a1f8b7efb54ce/62257efb6a4be9d6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905417999966:targetgroup/innovatech-tg-frontend/4a7fb10ccf3b3760",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905417999966:listener/app/innovatech-alb/774a1f8b7efb54ce/62257efb6a4be9d6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:905417999966:loadbalancer/app/innovatech-alb/774a1f8b7efb54ce",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "despachos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905417999966:targetgroup/innovatech-tg-despachos/93927eb28791ce40",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905417999966:listener-rule/app/innovatech-alb/774a1f8b7efb54ce/62257efb6a4be9d6/ce1cd15584e62249",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/despachos*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905417999966:listener-rule/app/innovatech-alb/774a1f8b7efb54ce/62257efb6a4be9d6/ce1cd15584e62249",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:905417999966:listener/app/innovatech-alb/774a1f8b7efb54ce/62257efb6a4be9d6",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.despachos",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ventas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905417999966:targetgroup/innovatech-tg-ventas/77391b3764e7b170",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905417999966:listener-rule/app/innovatech-alb/774a1f8b7efb54ce/62257efb6a4be9d6/afe1430e70ec4ca2",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/ventas*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905417999966:listener-rule/app/innovatech-alb/774a1f8b7efb54ce/62257efb6a4be9d6/afe1430e70ec4ca2",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:905417999966:listener/app/innovatech-alb/774a1f8b7efb54ce/62257efb6a4be9d6",
            "priority": 20,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.frontend",
            "aws_lb_target_group.ventas",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "despachos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905417999966:targetgroup/innovatech-tg-despachos/93927eb28791ce40",
            "arn_suffix": "targetgroup/innovatech-tg-despachos/93927eb28791ce40",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905417999966:targetgroup/innovatech-tg-despachos/93927eb28791ce40",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "innovatech-tg-despachos",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Project": "innovatech"
            },
            "tags_all": {
              "Project": "innovatech"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905417999966:targetgroup/innovatech-tg-frontend/4a7fb10ccf3b3760",
            "arn_suffix": "targetgroup/innovatech-tg-frontend/4a7fb10ccf3b3760",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905417999966:targetgroup/innovatech-tg-frontend/4a7fb10ccf3b3760",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "innovatech-tg-frontend",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Project": "innovatech"
            },
            "tags_all": {
              "Project": "innovatech"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ventas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905417999966:targetgroup/innovatech-tg-ventas/77391b3764e7b170",
            "arn_suffix": "targetgroup/innovatech-tg-ventas/77391b3764e7b170",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905417999966:targetgroup/innovatech-tg-ventas/77391b3764e7b170",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "innovatech-tg-ventas",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Project": "innovatech"
            },
            "tags_all": {
              "Project": "innovatech"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417999966:route-table/rtb-0d4f71b7a72d38021",
            "id": "rtb-0d4f71b7a72d38021",
            "owner_id": "905417999966",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "innovatech-rt-private",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-rt-private",
              "Project": "innovatech"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417999966:route-table/rtb-073b2df17a3571f4e",
            "id": "rtb-073b2df17a3571f4e",
            "owner_id": "905417999966",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b6cbe74dd1b2c213",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "innovatech-rt-public",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-rt-public",
              "Project": "innovatech"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04753a1708e7b0135",
            "route_table_id": "rtb-0d4f71b7a72d38021",
            "subnet_id": "subnet-011c8604d9f603978"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af17530a37ad2382",
            "route_table_id": "rtb-073b2df17a3571f4e",
            "subnet_id": "subnet-0b2a9386e8be45b58"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd889c2c27343b0f",
            "route_table_id": "rtb-073b2df17a3571f4e",
            "subnet_id": "subnet-0c6a5ccd95a2a706d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417999966:security-group/sg-0cca0760ef4705e59",
            "description": "Security Group del Application Load Balancer (unico punto de entrada publico)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cca0760ef4705e59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP desde Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "innovatech-sg-alb",
            "name_prefix": "",
            "owner_id": "905417999966",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "innovatech-sg-alb",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-sg-alb",
              "Project": "innovatech"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_despachos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417999966:security-group/sg-0e75c6a10c823fc51",
            "description": "Security Group tarea ECS Backend Despachos - solo interno",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e75c6a10c823fc51",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "API Despachos desde el ALB",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cca0760ef4705e59"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "innovatech-sg-ecs-despachos",
            "name_prefix": "",
            "owner_id": "905417999966",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "innovatech-sg-ecs-despachos",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-sg-ecs-despachos",
              "Project": "innovatech"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417999966:security-group/sg-004d4024861258f80",
            "description": "Security Group tareas ECS Frontend - solo recibe trafico del ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004d4024861258f80",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP desde el ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cca0760ef4705e59"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "innovatech-sg-ecs-frontend",
            "name_prefix": "",
            "owner_id": "905417999966",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "innovatech-sg-ecs-frontend",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-sg-ecs-frontend",
              "Project": "innovatech"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417999966:security-group/sg-0c5e410ba33696419",
            "description": "Security Group tarea ECS MySQL - solo accesible desde los backends",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5e410ba33696419",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL desde Backend Despachos",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e75c6a10c823fc51"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL desde Backend Ventas",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0868ae0ea5f3df402"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "innovatech-sg-ecs-mysql",
            "name_prefix": "",
            "owner_id": "905417999966",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "innovatech-sg-ecs-mysql",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-sg-ecs-mysql",
              "Project": "innovatech"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_despachos",
            "aws_security_group.ecs_ventas",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_ventas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417999966:security-group/sg-0868ae0ea5f3df402",
            "description": "Security Group tarea ECS Backend Ventas - solo interno",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0868ae0ea5f3df402",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "API Ventas desde el ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cca0760ef4705e59"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "innovatech-sg-ecs-ventas",
            "name_prefix": "",
            "owner_id": "905417999966",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "innovatech-sg-ecs-ventas",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-sg-ecs-ventas",
              "Project": "innovatech"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417999966:subnet/subnet-011c8604d9f603978",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011c8604d9f603978",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905417999966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "innovatech-subnet-private",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-subnet-private",
              "Project": "innovatech"
            },
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417999966:subnet/subnet-0b2a9386e8be45b58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2a9386e8be45b58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905417999966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "innovatech-subnet-public",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-subnet-public",
              "Project": "innovatech"
            },
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417999966:subnet/subnet-0c6a5ccd95a2a706d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6a5ccd95a2a706d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905417999966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "innovatech-subnet-public-b",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-subnet-public-b",
              "Project": "innovatech"
            },
            "vpc_id": "vpc-05b7f35668bc3e225"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417999966:vpc/vpc-05b7f35668bc3e225",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c971bbec0e1ab29",
            "default_route_table_id": "rtb-082e22b9e087e577c",
            "default_security_group_id": "sg-0bcc07480beed1db7",
            "dhcp_options_id": "dopt-0863346567666425d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b7f35668bc3e225",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082e22b9e087e577c",
            "owner_id": "905417999966",
            "tags": {
              "Name": "innovatech-vpc",
              "Project": "innovatech"
            },
            "tags_all": {
              "Name": "innovatech-vpc",
              "Project": "innovatech"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}